--- a/source code/[1] Flow Charts/List of Exercises.ipynb
+++ b/source code/[1] Flow Charts/List of Exercises.ipynb
@@ -11,8 +11,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[001](https://www.reddit.com/r/computervision/comments/axup4a/xeuscling_run_c_code_in_jupyter_notebook/). Write a program allow input two points $(x_1, y_1)$ and $(x_2, y_2)$. Calculate the distance between these points."
+    "[001](Exercise001). Write a program allow input two points $(x_1, y_1)$ and $(x_2, y_2)$. Calculate the distance between these points."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
