--- a/source code/[1] Flow Charts/List of Exercises.ipynb
+++ b/source code/[1] Flow Charts/List of Exercises.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[001](Exercise001). Write a program allow input two points $(x_1, y_1)$ and $(x_2, y_2)$. Calculate the distance between these points."
+    "[001](Exercise001.cpp). Write a program allow input two points $(x_1, y_1)$ and $(x_2, y_2)$. Calculate the distance between these points."
    ]
   },
   {
