--- a/source code/[1] Flow Charts/List of Exercises.ipynb
+++ b/source code/[1] Flow Charts/List of Exercises.ipynb
@@ -11,11 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
-    "[001](Exercise001.cpp). Write a program allow input two points $A(x_1, y_1)$ and $B(x_2, y_2)$. Calculate the `distance between two points` $d$ and print it to screen."
-=======
     "[001](Exercise001.cpp). Write a program allow input two points $(x_1, y_1)$ and $(x_2, y_2)$. Calculate the distance between these points."
->>>>>>> d5e1c5f03e4cbbef8841178392682118eb612c25
    ]
   },
   {
@@ -321,6 +317,37 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.5"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": false,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
