--- a/source code/[1] Flow Charts/List of Exercises.ipynb
+++ b/source code/[1] Flow Charts/List of Exercises.ipynb
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[027](Exercise027.cpp). Calculate the following sum S, with $n$ entered from keyboard.\n",
+    "[027](Exercise027.cpp). Calculate the following sum S, with $n$ is positive integer entered from keyboard.\n",
     "\n",
     "$$S(n) = 1 + 2 + 3 + ... + (n-1) + n$$\n"
    ]
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[028](Exercise028.cpp). Calculate the following sum S, with $n$ entered from keyboard.\n",
+    "[028](Exercise028.cpp). Calculate the following sum S, with $n$ is positive integer entered from keyboard.\n",
     "\n",
     "$$S(n) = 1^2 + 2^2 + 3^2 + ... + (n-1)^2 + n^2$$"
    ]
@@ -410,210 +410,239 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[049](Exercise049.cpp). "
+    "[049](Exercise049.cpp). Write a prgram allow input a positive integer $n$. List all `divisors` of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[050](Exercise050.cpp). "
+    "[050](Exercise050.cpp). Write a program allow input positive integer $n$. Calculate the `sum of divisors` of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[051](Exercise051.cpp). "
+    "[051](Exercise051.cpp). Write a program allow input positive integer $n$. Calculate the `product of divisors` of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[052](Exercise052.cpp). "
+    "[052](Exercise052.cpp). Write a program allow input positive integer $n$. Calculate the `number of divisors` of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[053](Exercise053.cpp). "
+    "[053](Exercise053.cpp). Write a program allow input positive integer $n$. List all `odd divisors` of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[054](Exercise054.cpp). "
+    "[054](Exercise054.cpp). Write a program allow input positive integer $n$. Calculate the `sum of even divisors` of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[055](Exercise055.cpp). "
+    "[055](Exercise055.cpp). Write a program allow input positive integer $n$. Calculate the `product of odd divisors` of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[056](Exercise056.cpp). "
+    "[056](Exercise056.cpp). Write a program allow input positive integer $n$. Calculate the `number of even divisors` of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[057](Exercise057.cpp). "
+    "[057](Exercise057.cpp). Write a program allow input positive integer $n$. Calculate the `sum of divisors` of $n$ that `smaller than` $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[058](Exercise058.cpp). "
+    "[058](Exercise058.cpp). Write a program allow input positive integer $n$. Calculate the `sum of digits` of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[059](Exercise059.cpp). "
+    "[059](Exercise059.cpp). Write a program allow input positive integer $n$. Calculate the `number of digits` of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[060](Exercise060.cpp). "
+    "[060](Exercise060.cpp). Write a program allow input positive integer $n$. Calculate the `product of digits` of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[061](Exercise061.cpp). "
+    "[061](Exercise061.cpp). Write a program allow input positive integer $n$. Calculate the `number of odd digits` of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[062](Exercise062.cpp). "
+    "[062](Exercise062.cpp).  Write a program allow input positive integer $n$. Calculate the `sum of even digits` of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[063](Exercise063.cpp). "
+    "[063](Exercise063.cpp).  Write a program allow input positive integer $n$. Calculate the `product of odd digits` of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[064](Exercise064.cpp). "
+    "[064](Exercise064.cpp). Write a program allow input positive integer $n$. Find the `max digit` of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[065](Exercise065.cpp). "
+    "[065](Exercise065.cpp). Write a program allow input positive integer $n$. Find the `min digit` of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[066](Exercise066.cpp). "
+    "[066](Exercise066.cpp). Write a program allow input positive integer $n$. Checks whether $n$ `exists even digits`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[067](Exercise067.cpp). "
+    "[067](Exercise067.cpp). Write a program allow input positive integer $n$. Checks whether $n$ `exists odd digits`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[068](Exercise068.cpp). "
+    "---------"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[069](Exercise069.cpp). "
+    "[068](Exercise068.cpp). Calculate the following sum, with $n$ is positive integer entered from keyboard.\n",
+    "\n",
+    "$$S(n) = 1 + 1 \\times 2 + 1 \\times 2 \\times 3 + ... + 1 \\times 2 \\times 3 \\times ... \\times n$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[070](Exercise070.cpp). "
+    "[069](Exercise069.cpp). Calculate the following sum, with $x$ is float number and $n$ is positive integer entered from keyboard.\n",
+    "\n",
+    "$$S(x, n) = x + x^2 + x^3 +... + x^{n-1} + x^n $$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[071](Exercise071.cpp). "
+    "[070](Exercise070.cpp). Calculate the following sum, with $x$ is float number and $n$ is positive integer entered from keyboard.\n",
+    "\n",
+    "$$S(x, n) = x^2 + x^4 + x^6 + ... + x^{2(n-1)} + x^{2n}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[072](Exercise072.cpp). "
+    "[071](Exercise071.cpp). Calculate the following sum, with $x$ is float number and $n$ is positive integer entered from keyboard.\n",
+    "\n",
+    "$$S(x, n) = x + x^3 + x^5 + ... + x^{2(n-1) + 1} + x^{2n+1}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[073](Exercise073.cpp). "
+    "[072](Exercise072.cpp). Calculate the following sum, with $n$ is positive integer entered from keyboard.\n",
+    "\n",
+    "$$S(n) = 1 + \\frac{1}{1+2} + \\frac{1}{1+2+3} + ... +\\frac{1}{1+2+3+...+n}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[074](Exercise074.cpp). "
+    "[073](Exercise073.cpp). Calculate the following sum, with $x$ is float number and $n$ is positive integer entered from keyboard.\n",
+    "\n",
+    "$$S(x, n) = x + \\frac{x^2}{1+2} + \\frac{x^3}{1+2+3} + ... + \\frac{x^n}{1+2+3+...+n}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[075](Exercise075.cpp). "
+    "[074](Exercise074.cpp). Calculate the following sum, with $x$ is float number and $n$ is positive integer entered from keyboard.\n",
+    "\n",
+    "$$S(x, n) = x + \\frac{x^2}{2!} + \\frac{x^3}{3!} + ... + \\frac{x^{n-1}}{(n-1)!} + \\frac{x^n}{n!}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[076](Exercise076.cpp). "
+    "[075](Exercise075.cpp). Calculate the following sum, with $x$ is float number and $n$ is positive integer entered from keyboard.\n",
+    "\n",
+    "$$S(x, n) = 1 + \\frac{x^2}{2!} + \\frac{x^4}{4!} + ... + \\frac{x^{2n}}{(2n)!}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[077](Exercise077.cpp). "
+    "[076](Exercise076.cpp). Calculate the following sum, with $x$ is float number and $n$ is positive integer entered from keyboard.\n",
+    "\n",
+    "$$S(x, n) = 1 + x + \\frac{x^3}{3!} + \\frac{x^5}{5!} + ... + \\frac{x^{2n+1}}{(2n+1)!}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[078](Exercise078.cpp). "
+    "[077](Exercise077.cpp). Calculate the following sum, with $k$ and $n$ are positive integer entered from keyboard.\n",
+    "\n",
+    "$$S(k, n) = 1^k + 2^k + 3^k + ... + (n-1)^k + n^k$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[078](Exercise078.cpp). Calculate the following sum, with $n$ is positive integer entered from keyboard.\n",
+    "\n",
+    "$$S(n) = \\frac{n}{1 + \\frac{1}{1+2} + \\frac{1}{1+2+3} + ... + \\frac{1}{1+2+3+...+n}}$$"
    ]
   },
   {
@@ -1260,18 +1289,41 @@
    "name": "c++",
    "version": "14"
   },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
   "toc": {
    "base_numbering": 1,
    "nav_menu": {},
-   "number_sections": true,
+   "number_sections": false,
    "sideBar": true,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "165px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
